# scifi-boekenclub

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  TODO.md  mkdocs.yml  pyproject.toml  release.config.js
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  semantic-release.yml
data/: README.md  boekenclub_overzicht.csv  boekenclub_overzicht_updated.csv  bookclub_processed.csv  bookclub_source.csv  processed_data.csv
data/bookclub/: bookclub.csv  manual_ratings.csv
data/clean/: goodreads.csv  scifi.csv  unmatched.csv
data/goodreads/: Thomas is een worstje_clean.csv  goodreads_combined.csv  goodreads_library_export-PHT_clean.csv  goodreads_unmatched.csv  koen_goodreads_library_export.csv  manual_ratings.csv  thomas_goodreads_library_export.csv
data/goodreads/clean/: Thomas is een worstje_clean.csv  dion_goodreads_library_export.csv  goodreads_library_export-PHT_clean.csv  goodreads_library_export-thirsa.csv  koen_goodreads_library_export.csv  koen_m_goodreads_library_export.csv  laurynas_goodreads_library_export.csv  thomas_goodreads_library_export.csv
data/goodreads/messy/: Thomas is een worstje.csv  goodreads_library_export-PHT.csv
docs/: bundle_deployment.md  cicd.md  coding_standards.md  commands.md  getting_started.md  index.md  release.md  scifi.md
docs/api/scifi/: index.html  main.html  tools.html
docs/api/tests/: default_test.html  index.html
docs/jobs/: index.md
docs/notebooks/: index.md
docs/tests/: coverage_report.md  test_configuration.md  tests.md
docs/tests/coverage/: class_index.html  function_index.html  index.html  status.json  z_05c5a673803a19f1___init___py.html  z_05c5a673803a19f1_main_py.html  z_6e5cfbb1049754cf___init___py.html  z_6e5cfbb1049754cf_main_py.html  z_6e5cfbb1049754cf_tools_py.html
notebooks/: aggregating.ipynb  anti-joining.ipynb  cleaning.ipynb  eda.ipynb  exploration.ipynb
src/scifi/: __init__.py  dashboard.py  data_processor.py  file_utils.py  legacy_visualizer.py  main.py  members.py  utils.py  visualize.py  visualizer.py
tests/: __init__.py  default_test.py  file_utils_test.py  utils_test.py
