[project]
name = "scifi"
version = "0.1.0"
description = "Analyse van alle boeken van de enige echte Sci-Fi Boekenclub."
authors = [
    { name = "Thomas Brouwer", email = "brouwer.thomas@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "nbformat>=5.10.4",
    "plotly>=5.24.1",
    "polars>=1.8.2",
    "scipy>=1.14.1",
    "streamlit>=1.38.0",
]

[tool.uv]
package = true
dev-dependencies = [
    "coverage>=7.6.1",
    "defusedxml>=0.7.1",
    "genbadge>=1.1.1",
    "git-cliff>=2.6.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.39",
    "mypy>=1.11.2",
    "mypy-extensions>=1.0.0",
    "pdoc3>=0.11.1",
    "pre-commit>=3.8.0",
    "pydoclint>=0.5.9",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.8",
]

[tool.ruff]
src = ["src"]
target-version = "py312"
line-length = 100
extend-include = ["*.ipynb"]
exclude = ["scratch"]
external = ["DOC"]

[tool.ruff.lint]
pydocstyle.convention = "numpy"
select = ["ALL"]
ignore = [
    "D203",     # "One blank line required before class docstring." Should be disabled by default.
    "D213",     # "Multi-line docstring summary should start at the second line." Should be disabled by default.
    "E501",     # "Line too long." Sometimes my comments are a bit longer.
    "S101",     # "Use of `assert` detected." Used quite often in tests.
    "FBT001",   # "Boolean positional arg in function definition." I sometimes use this.
    "FBT002",   # "Boolean default value in function definition." I sometimes use this too.
    "ERA001",   # "Found commented out code." I comment out code sometimes
    "E731",     # "Do not assign a lambda expression, use a def." Needed for spark UDFs.
    "N812",     # "Lowercase `functions` imported as non-lowercase." Pretty standard for spark programming.
    "COM812",   # "Missing trailing comma." Ignored since it conflicts with the formatter.
    "ISC001",   # "Implicit string concatenation." Ignored since it conflicts with the formatter.
    "T201",     # "`print` found." I use this for debugging.
    "FBT003",   # "Boolean positional value in function call." This is fairly common in spark.
    "ANN101",   # "Missing type annotation for `self`." Deprecated.
    "PD010",    # "`.pivot_table` is preferred to `.pivot` or `.unstack`." Polars uses `.pivot`.
]
unfixable = [
    "F401",     # "Unused import." Disabled since it makes linting/formatting notebooks messy and impossible.
]

[tool.ruff.lint.per-file-ignores]
"resources/**/*.py" = [
    "INP001",   # "Part of an implicit namespace package. Add an `__init__.py`." Not needed for Databricks notebooks.
    "D100",     # "Missing docstring in public module." Not needed for Databricks notebooks.
]
"tests/*.py" = [
    "PLR2004",  # "Magic value used in comparison, consider replacing with a constant variable." This is fine for tests.
]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_decorators = false
disable_error_code = ["name-defined"]  # Workaround to ignore: spark, dbutils, display, dlt
exclude = ["scratch"]

[[tool.mypy.overrides]]
module = ["scifi.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pydoclint]
style = "numpy"
exclude = ".git|.venv|scratch"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
major_on_zero = true
branch = "main"
commit_author = "github-actions[bot] <actions@github.com>"
changelog_generate = false

[tool.git-cliff.changelog]
header = """
# Changelog\n
All notable changes to this project will be documented in this file.\n
"""
body = """
{% if version %}\
    ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
{% else %}\
    ## [unreleased]
{% endif %}\
{% for group, commits in commits | group_by(attribute="group") %}
    ### {{ group | striptags | trim | upper_first }}
    {% for commit in commits %}
        - {% if commit.scope %}*({{ commit.scope }})* {% endif %}\
            {% if commit.breaking %}[**breaking**] {% endif %}\
            {{ commit.message | upper_first }}\
    {% endfor %}
{% endfor %}\n
"""
trim = true

[tool.git-cliff.git]
conventional_commits = true
filter_unconventional = true
split_commits = false
commit_parsers = [
  { message = "^feat: initial commit", skip = true },
  { message = "^feat", group = "<!-- 0 -->🚀 Features" },
  { message = "^fix", group = "<!-- 1 -->🐛 Bug Fixes" },
  { message = "^doc", group = "<!-- 3 -->📚 Documentation" },
  { message = "^perf", group = "<!-- 4 -->⚡ Performance" },
  { message = "^refactor", group = "<!-- 2 -->🚜 Refactor" },
  { message = "^style", group = "<!-- 5 -->🎨 Styling" },
  { message = "^test", group = "<!-- 6 -->🧪 Testing" },
  { message = "^chore\\(release\\)", skip = true },
  { message = "^chore\\(deps.*\\)", skip = true },
  { message = "^chore\\(pr\\)", skip = true },
  { message = "^chore\\(pull\\)", skip = true },
  { message = "^chore|^ci", group = "<!-- 7 -->⚙️ Miscellaneous Tasks" },
  { body = ".*security", group = "<!-- 8 -->🛡️ Security" },
  { message = "^revert", group = "<!-- 9 -->◀️ Revert" },
  { message = "^build", group = "<!-- 10 -->🏗️ Build System" },
]
filter_commits = false
topo_order = false
sort_commits = "oldest"
